--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -6,9 +6,10 @@ on:
       - main
 
 jobs:
-  say-hello:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Run Hello World
+      - uses: actions/checkout@v3
+      - name: Run make say-hello
         run: make say-hello
